[package]
name = "koifeed"
version = "1.0.0"
authors = ["Ty Kozic <tykozic@posteo.net>"]
edition = "2018"
license = "MIT"
description = "An RSS/Atom CLI in Rust focused on composability."
homepage = "https://github.com/kozity/koifeed"
repository = "https://github.com/kozity/koifeed"
keywords = ["rss", "atom"]
categories = ["command-line-utilities"]
readme = "README.md"

[profile.release]
opt-level = "s"

[[bin]]
path = "src/main.rs"
name = "koi"

[dependencies]
clap = "2.33.3"
reqwest = { version = "0.11.2", features = ["blocking"] }
xml-rs = "0.8.3"
